--- a/force-app/main/default/lwc/sessionWizard/sessionWizard.html
+++ b/force-app/main/default/lwc/sessionWizard/sessionWizard.html
@@ -51,6 +51,7 @@
         </div>
       </lightning-record-edit-form>
     </template>
+
     <template if:true={sessions}>
       <!-- apresenta a(s) sessão(sessões) criadas -->
       <template for:each={sessions} for:item="session_id">
@@ -69,31 +70,46 @@
                 <lightning-output-field field-name="Session_Price__c"></lightning-output-field>
                 <lightning-output-field field-name="End_Time__c"></lightning-output-field>
                 <lightning-output-field field-name="Venue__c"></lightning-output-field>
-                <lightning-input type="checkbox" name="clonecheck" label="Clone this session?" checked > <!--onclick={}-->
+                <lightning-input type="checkbox" name="clonecheck" label="Clone this session?" checked>
+                  <!--onclick={}-->
                 </lightning-input>
               </div>
             </div>
           </lightning-record-view-form>
-          <lightning-button variant="brand" label="Add Session Venue" onclick={handleShow}>
-          </lightning-button>
+        </div>
+      </template>
 
-          <template if:true={showTemplateSesssionVenues}>
-            <!-- apresenta o formulário para criação de um secção para a sessão -->
+      <template for:each={sessionVenues} for:item="session_venue_id">
+        <div key={sessionVenueId}>
+          <lightning-record-view-form object-api-name={sessionVenueObject} record-id={session_venue_id}>
+            <lightning-messages></lightning-messages>
+            <lightning-output-field field-name="Date__c"></lightning-output-field>
+            <lightning-output-field field-name="Price__c"></lightning-output-field>
+            <lightning-output-field field-name="Session__c"></lightning-output-field>
+            <lightning-output-field field-name="Venue__c"></lightning-output-field>
+            <lightning-output-field field-name="Seat_Type__c"></lightning-output-field>
+          </lightning-record-view-form>
+        </div>
+      </template>
+      <!--
+              <lightning-button variant="brand" label="Show Session Venue(s)" onclick={handleShow}>
+          </lightning-button>
+               apresenta o formulário para criação de uma secção para a sessão
+            <template if:true={showTemplateSesssionVenues}>
             <lightning-record-edit-form object-api-name={sessionVenueObject} onsuccess={handleSessionVenue}>
               <lightning-messages> </lightning-messages>
               <div class="slds-var-m-top_medium"></div>
 
               <lightning-input-field field-name="Date__c"></lightning-input-field>
-              <lightning-input-field field-name="Price__c"></lightning-input-field>
+              <lightning-input-field field-name="Price__c" value={session_id.Session_Price__c}></lightning-input-field>
               <lightning-input-field field-name="Session__c" value={session_id}></lightning-input-field>
               <lightning-input-field field-name="Venue__c"></lightning-input-field>
               <lightning-input-field field-name="Seat_Type__c"></lightning-input-field>
-              <lightning-input-field field-name="Apply_the_Session_Price__c"></lightning-input-field>
               <lightning-button variant="brand" type="submit" label="Save Session Venue"></lightning-button>
             </lightning-record-edit-form>
-          </template>
-        </div>
-      </template>
+            </template> -->
+
+
       <lightning-button variant="brand" label="Clone Selected Session(s)"></lightning-button>
     </template>
   </lightning-card>
