--- a/force-app/main/default/lwc/sessionWizard/sessionWizard.html
+++ b/force-app/main/default/lwc/sessionWizard/sessionWizard.html
@@ -1,98 +1,145 @@
 <template>
   <lightning-card title="Session" icon-name="custom:custom35">
-    <lightning-input name="enter-search" label="Search for Venue" type="search" onchange={handleSearch}>
-    </lightning-input>
+    <div class="slds-is-relative">
+      <template if:true={isLoading}>
+        <lightning-spinner size="medium" alternative-text="Is Loading" variant="brand"></lightning-spinner>
+      </template>
+      <lightning-input name="enter-search" label="Search for Venue" type="search" onchange={handleSearch}>
+      </lightning-input>
 
-    <template if:true={venueListEmpty}>No event venues found</template>
+      <template if:true={venueListEmpty}>No event venues found</template>
 
-    <template if:true={venues}>
-      <!-- caso a pesquisa tenha resultados, apresenta os espaços do evento -->
-      <div id="listbox-id-2" class="slds-dropdown slds-dropdown_length-with-icon-7 slds-dropdown_fluid" role="listbox">
-        <ul class="slds-listbox slds-listbox_vertical" role="presentation">
-          <template for:each={venues} for:item="venue">
-            <li role="presentation" class="slds-listbox__item" key={venue.Id} data-venue={venue.Id}
-              onclick={selectVenue}>
-              <div class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
-                role="option">
-                <span class="slds-media__figure slds-listbox__option-icon">
-                  <span class="slds-icon_container slds-icon-custom-custom4">
-                    <lightning-icon icon-name="custom:custom4" title="custom4" size="small"></lightning-icon>
+      <template if:true={venues}>
+        <!-- caso a pesquisa tenha resultados, apresenta os espaços do evento -->
+        <div id="listbox-id-2" class="slds-dropdown slds-dropdown_length-with-icon-7 slds-dropdown_fluid"
+          role="listbox">
+          <ul class="slds-listbox slds-listbox_vertical" role="presentation">
+            <template for:each={venues} for:item="venue">
+              <li role="presentation" class="slds-listbox__item" key={venue.Id} data-venue={venue.Id}
+                onclick={selectVenue}>
+                <div class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta"
+                  role="option">
+                  <span class="slds-media__figure slds-listbox__option-icon">
+                    <span class="slds-icon_container slds-icon-custom-custom4">
+                      <lightning-icon icon-name="custom:custom4" title="custom4" size="small"></lightning-icon>
+                    </span>
                   </span>
-                </span>
-                <span class="slds-media__body">
-                  <span class="slds-listbox__option-text slds-listbox__option-text_entity">{venue.Name}</span>
-                </span>
-              </div>
-            </li>
-          </template>
-        </ul>
-      </div>
-    </template>
-
-    <template if:true={venueSelected}>
-      <!-- apresenta o formulário de criação da sessão -->
-      <lightning-record-edit-form object-api-name={sessionObject} onsuccess={handleSuccess}>
-        <lightning-messages> </lightning-messages>
-        <div class="slds-grid slds-gutters">
-          <div class="slds-col">
-            <lightning-input-field field-name="Date__c"></lightning-input-field>
-            <lightning-input-field field-name="Start_Time__c"></lightning-input-field>
-            <lightning-input-field field-name="Session__c" value={recordId}></lightning-input-field>
-            <lightning-input-field field-name="Status__c"> </lightning-input-field>
-          </div>
-          <div class="slds-col">
-            <lightning-input-field field-name="Session_Price__c"></lightning-input-field>
-            <lightning-input-field field-name="End_Time__c"></lightning-input-field>
-            <lightning-input-field field-name="Venue__c" value={venueId}></lightning-input-field>
-          </div>
+                  <span class="slds-media__body">
+                    <span class="slds-listbox__option-text slds-listbox__option-text_entity">{venue.Name}</span>
+                  </span>
+                </div>
+              </li>
+            </template>
+          </ul>
         </div>
-        <div class="slds-var-m-top_medium">
-          <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
-        </div>
-      </lightning-record-edit-form>
-    </template>
+      </template>
 
-    <template if:true={sessions}>
-      <!-- apresenta a(s) sessão(sessões) criadas -->
-      <template for:each={sessions} for:item="session_id">
-        <div key={sessionId}>
-          <lightning-record-view-form object-api-name={sessionObject} record-id={session_id}>
-            <lightning-messages> </lightning-messages>
+      <template if:true={venueSelected}>
+        <!-- apresenta o formulário de criação da sessão -->
+        <lightning-record-edit-form object-api-name={sessionObject} onsuccess={handleSuccess} onload={hideLoading}
+          onsubmit={showLoading}>
+          <lightning-messages> </lightning-messages>
+          <div class="slds-grid slds-gutters">
+            <div class="slds-col">
+              <lightning-input-field field-name="Date__c"></lightning-input-field>
+              <lightning-input-field field-name="Start_Time__c"></lightning-input-field>
+              <lightning-input-field field-name="Session__c" value={recordId}></lightning-input-field>
+              <lightning-input-field field-name="Status__c">
+              </lightning-input-field>
+            </div>
+            <div class="slds-col">
+              <lightning-input-field field-name="Session_Price__c"></lightning-input-field>
+              <lightning-input-field field-name="End_Time__c"></lightning-input-field>
+              <lightning-input-field field-name="Venue__c" value={venueId}></lightning-input-field>
+            </div>
+          </div>
+          <div class="slds-var-m-top_medium">
+            <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
+          </div>
+        </lightning-record-edit-form>
+      </template>
 
-            <div class="slds-grid slds-gutters">
-              <div class="slds-col">
-                <lightning-output-field field-name="Date__c"></lightning-output-field>
-                <lightning-output-field field-name="Start_Time__c"></lightning-output-field>
-                <lightning-output-field field-name="Session__c"></lightning-output-field>
-                <lightning-output-field field-name="Status__c"></lightning-output-field>
+      <template if:true={sessions}>
+        <!-- apresenta a(s) sessão(sessões) criadas -->
+        <template for:each={sessions} for:item="session">
+          <div key={session.sessionId} class="slds-border_bottom slds-var-p-around_medium">
+            <lightning-record-view-form object-api-name={sessionObject} record-id={session.sessionId}>
+              <lightning-messages> </lightning-messages>
+
+              <div class="slds-grid slds-gutters">
+                <div class="slds-col">
+                  <lightning-output-field field-name="Date__c"></lightning-output-field>
+                  <lightning-output-field field-name="Start_Time__c"></lightning-output-field>
+                  <lightning-output-field field-name="Session__c"></lightning-output-field>
+                  <lightning-output-field field-name="Status__c"></lightning-output-field>
+                </div>
+                <div class="slds-col">
+                  <lightning-output-field field-name="Session_Price__c"></lightning-output-field>
+                  <lightning-output-field field-name="End_Time__c"></lightning-output-field>
+                  <lightning-output-field field-name="Venue__c"></lightning-output-field>
+                  <lightning-input type="checkbox" name="clonecheck" label="Clone this session?" checked>
+                    <!--onclick={}-->
+                  </lightning-input>
+                </div>
               </div>
-              <div class="slds-col">
-                <lightning-output-field field-name="Session_Price__c"></lightning-output-field>
-                <lightning-output-field field-name="End_Time__c"></lightning-output-field>
-                <lightning-output-field field-name="Venue__c"></lightning-output-field>
-                <lightning-input type="checkbox" name="clonecheck" label="Clone this session?" checked>
-                  <!--onclick={}-->
-                </lightning-input>
+            </lightning-record-view-form>
+            <template for:each={session.sessionVenuesId} for:item="session_venueId">
+              <div key={session_venueId} class="slds-border_bottom slds-var-p-around_medium">
+                <lightning-record-edit-form object-api-name={sessionVenueObject} record-id={session_venueId}>
+                  <lightning-messages></lightning-messages>
+                  <div class="slds-grid slds-gutters">
+                    <div class="slds-col">
+                      <lightning-input-field field-name="Price__c"></lightning-input-field>
+                    </div>
+                    <div class="slds-col">
+                      <lightning-input-field field-name="Seat_Type__c"></lightning-input-field>
+                    </div>
+                  </div>
+                  <div class="slds-var-m-top_medium">
+                    <lightning-button variant="brand" type="submit" label="Update Session Venue"></lightning-button>
+                  </div>
+                </lightning-record-edit-form>
+              </div>
+            </template>
+          </div>
+        </template>
+
+
+        <lightning-button variant="brand" label="Clone Selected Session(s)" onclick={toggleCloningModal}>
+        </lightning-button>
+        <template if:true={showCloningModal}>
+          <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+            class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+              <div class="slds-modal__header">
+                <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Clone Sessions</h1>
+              </div>
+              <div class="slds-modal__content slds-var-p-around_medium" id="modal-content-id-1" style="height: 250px;">
+                
+                  <lightning-combobox
+                          name="progress"
+                          label="Status"
+                          value={peridiocityValue}
+                          placeholder="Select Peridiocity"
+                          options={peridiocityOptions}
+                          onchange={handlePeridiocityChange} >
+                  </lightning-combobox>
+                  <p>Selected value is: {peridiocityValue}</p>
+              </div>
+              <div class="slds-modal__footer">
+                <button class="slds-button" aria-label="Cancel and close" onclick={toggleModal}>Cancel</button>
+                <button class="slds-button slds-button_brand">Save</button>
               </div>
             </div>
-          </lightning-record-view-form>
-        </div>
+          </section>
+          <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
+        </template>
       </template>
+    </div>
+  </lightning-card>
+</template>
 
-      <template for:each={sessionVenues} for:item="session_venue_id">
-        <div key={sessionVenueId}>
-          <lightning-record-view-form object-api-name={sessionVenueObject} record-id={session_venue_id}>
-            <lightning-messages></lightning-messages>
-            <lightning-output-field field-name="Date__c"></lightning-output-field>
-            <lightning-output-field field-name="Price__c"></lightning-output-field>
-            <lightning-output-field field-name="Session__c"></lightning-output-field>
-            <lightning-output-field field-name="Venue__c"></lightning-output-field>
-            <lightning-output-field field-name="Seat_Type__c"></lightning-output-field>
-          </lightning-record-view-form>
-        </div>
-      </template>
-      <!--
-              <lightning-button variant="brand" label="Show Session Venue(s)" onclick={handleShow}>
+<!--      <lightning-button variant="brand" label="Show Session Venue(s)" onclick={handleShow}>
           </lightning-button>
                apresenta o formulário para criação de uma secção para a sessão
             <template if:true={showTemplateSesssionVenues}>
@@ -108,9 +155,3 @@
               <lightning-button variant="brand" type="submit" label="Save Session Venue"></lightning-button>
             </lightning-record-edit-form>
             </template> -->
-
-
-      <lightning-button variant="brand" label="Clone Selected Session(s)"></lightning-button>
-    </template>
-  </lightning-card>
-</template>
