--- a/force-app/main/default/lwc/sessionWizard/sessionWizard.html
+++ b/force-app/main/default/lwc/sessionWizard/sessionWizard.html
@@ -1,16 +1,15 @@
 <template>
-  <lightning-card title="Session" icon-name="custom:custom35">
+  <lightning-card title="Session Creation" icon-name="custom:custom35">
     <div class="slds-is-relative">
       <template if:true={isLoading}>
         <lightning-spinner size="medium" alternative-text="Is Loading" variant="brand"></lightning-spinner>
       </template>
-      <lightning-input name="enter-search" label="Search for Venue" type="search" onchange={handleSearch}>
-      </lightning-input>
+      <lightning-input name="enter-search" label="Search for Venue" type="search" onchange={handleSearch}></lightning-input>
 
-      <template if:true={venueListEmpty}>No event venues found</template>
+      <template if:true={venueListEmpty}>No venues were found</template>
 
+      <!-- caso a pesquisa tenha resultados, apresenta os espaços do evento -->
       <template if:true={venues}>
-        <!-- caso a pesquisa tenha resultados, apresenta os espaços do evento -->
         <div id="listbox-id-2" class="slds-dropdown slds-dropdown_length-with-icon-7 slds-dropdown_fluid"
           role="listbox">
           <ul class="slds-listbox slds-listbox_vertical" role="presentation">
@@ -34,33 +33,58 @@
         </div>
       </template>
 
+      <!-- apresenta o formulário de criação da sessão -->
       <template if:true={venueSelected}>
-        <!-- apresenta o formulário de criação da sessão -->
-        <lightning-record-edit-form object-api-name={sessionObject} onsuccess={handleSuccess} onload={hideLoading}
-          onsubmit={showLoading} onerror={errorDefaultMessage}>
-          <lightning-messages> </lightning-messages>
-          <div class="slds-grid slds-gutters">
-            <div class="slds-col">
-              <lightning-input-field field-name="Date__c"></lightning-input-field>
-              <lightning-input-field field-name="Start_Time__c"></lightning-input-field>
-              <lightning-input-field field-name="Session__c" value={recordId}></lightning-input-field>
-              <lightning-input-field field-name="Status__c">
-              </lightning-input-field>
+        <template if:false={showBasedOnRecordId}>
+          <lightning-record-edit-form object-api-name={sessionObject} onsuccess={handleSuccess} onload={hideLoading}
+            onsubmit={showLoading} onerror={errorDefaultMessage}>
+            <lightning-messages> </lightning-messages>
+            <div class="slds-grid slds-gutters">
+              <div class="slds-col">
+                <lightning-input-field field-name="Date__c"></lightning-input-field>
+                <lightning-input-field field-name="Start_Time__c"></lightning-input-field>
+                <lightning-input-field field-name="Session__c"></lightning-input-field>
+                <lightning-input-field field-name="Status__c">
+                </lightning-input-field>
+              </div>
+              <div class="slds-col">
+                <lightning-input-field field-name="Session_Price__c"></lightning-input-field>
+                <lightning-input-field field-name="End_Time__c"></lightning-input-field>
+                <lightning-input-field field-name="Venue__c" value={venueId}></lightning-input-field>
+              </div>
             </div>
-            <div class="slds-col">
-              <lightning-input-field field-name="Session_Price__c"></lightning-input-field>
-              <lightning-input-field field-name="End_Time__c"></lightning-input-field>
-              <lightning-input-field field-name="Venue__c" value={venueId}></lightning-input-field>
+            <div class="slds-var-m-top_medium">
+              <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
             </div>
-          </div>
-          <div class="slds-var-m-top_medium">
-            <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
-          </div>
-        </lightning-record-edit-form>
+          </lightning-record-edit-form>
+        </template>
+        <template if:true={showBasedOnRecordId}>
+          <lightning-record-edit-form object-api-name={sessionObject} onsuccess={handleSuccess} onload={hideLoading}
+            onsubmit={showLoading} onerror={errorDefaultMessage}>
+            <lightning-messages> </lightning-messages>
+            <div class="slds-grid slds-gutters">
+              <div class="slds-col">
+                <lightning-input-field field-name="Date__c"></lightning-input-field>
+                <lightning-input-field field-name="Start_Time__c"></lightning-input-field>
+                <lightning-input-field field-name="Session__c" value={recordId}></lightning-input-field>
+                <lightning-input-field field-name="Status__c">
+                </lightning-input-field>
+              </div>
+              <div class="slds-col">
+                <lightning-input-field field-name="Session_Price__c"></lightning-input-field>
+                <lightning-input-field field-name="End_Time__c"></lightning-input-field>
+                <lightning-input-field field-name="Venue__c" value={venueId}></lightning-input-field>
+              </div>
+            </div>
+            <div class="slds-var-m-top_medium">
+              <lightning-button variant="brand" type="submit" label="Save"></lightning-button>
+            </div>
+          </lightning-record-edit-form>
+        </template>
       </template>
 
+      <!-- apresenta a(s) sessão(sessões) criadas -->
       <template if:true={sessions}>
-        <!-- apresenta a(s) sessão(sessões) criadas -->
         <template for:each={sessions} for:item="session">
           <div class="slds-border_bottom slds-var-p-around_medium" key={session.sessionId}>
             <lightning-record-view-form object-api-name={sessionObject} record-id={session.sessionId}>
