--- a/force-app/main/default/lwc/sessionWizard/sessionWizard.html
+++ b/force-app/main/default/lwc/sessionWizard/sessionWizard.html
@@ -112,6 +112,7 @@
                   <lightning-messages></lightning-messages>
                   <div class="slds-grid slds-gutters">
                     <div class="slds-col">
+                      <lightning-output-field field-name="Venue__c"></lightning-output-field>
                       <lightning-input-field field-name="Price__c"></lightning-input-field>
                     </div>
                     <div class="slds-col">
