--- a/force-app/main/default/lwc/setupWizard/setupWizard.html
+++ b/force-app/main/default/lwc/setupWizard/setupWizard.html
@@ -103,11 +103,15 @@
         <lightning-card title="Venue" icon-name="custom:custom4">
             <div class="slds-is-relative">
                 <c-venue-wizard></c-venue-wizard>
-                <!-- record-id={} -->
-                <lightning-button variant="brand" label="Done" onclick={hideShortVenueForm} class="slds-var-m-left_x-small">
-                </lightning-button>
-                <lightning-button variant="neutral" label="Back" onclick={hideShortVenueForm} class="slds-var-m-left_x-small"></lightning-button>
             </div>
+            <!-- record-id={} -->
+            <template if:true={showButtons}>
+                <div class="slds-is-relative">
+                    <!-- <lightning-button variant="brand" label="Done" onclick={hideShortVenueForm} class="slds-var-m-left_x-small">
+                    </lightning-button> -->
+                    <lightning-button variant="neutral" label="Back" onclick={hideShortVenueForm} class="slds-var-m-left_x-small"></lightning-button>
+                </div>
+            </template>
         </lightning-card>
     </template>
 
