--- a/force-app/main/default/lwc/venueWizard/venueWizard.html
+++ b/force-app/main/default/lwc/venueWizard/venueWizard.html
@@ -68,8 +68,7 @@
                 <div class="slds-border_bottom slds-var-p-around_medium" key={section.Id}>
 
                     <lightning-record-edit-form object-api-name={venueObject} record-id={section.Id}
-                        record-type-id={section.RecordTypeId} onload={hideLoading} onsubmit={handleSectionUpdate}
-                        onerror={errorDefaultMessage}>
+                        record-type-id={section.RecordTypeId} onload={hideLoading} onsubmit={handleSectionUpdate} onsuccess={handleSectionSuccess}>
                         <lightning-messages> </lightning-messages>
                         <div class="slds-grid slds-gutters">
                             <div class="slds-col">
@@ -93,7 +92,7 @@
                         <template for:each={section.rows} for:item="row">
                             <div class="slds-border_bottom slds-var-p-around_medium" key={row.Id}>
                                 <lightning-record-edit-form object-api-name={rowObject} record-id={row.Id}
-                                    onload={hideLoading} onsubmit={handleRowUpdate} onerror={errorDefaultMessage}>
+                                    onload={hideLoading} onsubmit={handleRowUpdate} onsuccess={handleRowSuccess}>
                                     <lightning-messages> </lightning-messages>
                                     <div class="slds-grid slds-gutters">
                                         <div class="slds-col">
